cmake_minimum_required(VERSION 3.15)
project(Encryption_And_Decryption)

set(CMAKE_CXX_STANDARD 14)

add_executable(Encryption_And_Decryption main.cpp Encryption_And_Decryption_Lib/Encryption_Decryption.cpp Encryption_And_Decryption_Lib/Encryption_Decryption.h Encryption_And_Decryption_Lib/Complex_EncryptionAndDecryption.cpp Encryption_And_Decryption_Lib/Complex_EncryptionAndDecryption.h)